# codex

milos/: .env.example  .gitignore  README.md  README_AZURE_AD.md  __init__.py  check_azure_endpoints.py  codex_azure.py  codex_azure_config.py  codex_azure_nodejs.py  codex_azure_simple.py  get_azure_token.py  pyproject.toml  setup_azure_apikey.py  setup_azure_config.py  setup_direct_endpoint.py  test_azure_apikey.py  test_azure_endpoint.py  update_azure_config.py
